Tests/StellaTests/Resources/printed-code/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/return_lambda_with_wrong_return.st
language core;

fn main(n : Nat) -> fn(Nat) -> Bool {
    return fn(i : Nat) {
        return i
    }
}